add_executable(max_ones
        arrays/max_ones.cpp
        )

add_executable(even_digits
        arrays/even_digits.cpp
        )

add_executable(squared_sort
        arrays/squared_sort.cpp
        )

add_executable(rainWater
        arrays/rainWater.cpp
        )

add_executable(trappingRainwater3D
        queue/trappingRainwater3D.cpp
        )

add_executable(Alternate_PosNegNumbers
        Alternate_Positioning/Alternate_PosNegNumbers.cpp
        )

add_executable(Alternate_PosNegNumbers2
        Alternate_Positioning/Alternate_PosNegNumbers2.cpp
        )

add_executable(clockwiseMethod1
        matrix_rotation/clockwiseMethod1.cpp
        )

add_executable(antiClockwiseMethod1
        matrix_rotation/antiClockwiseMethod1.cpp
        )

add_executable(clockwiseMethod2
        matrix_rotation/clockwiseMethod2.cpp
        )

add_executable(clockwiseMethod3
        matrix_rotation/clockwiseMethod3.cpp
        )