add_executable(max_ones
        arrays/max_ones.cpp
        )

add_executable(even_digits
        arrays/even_digits.cpp
        )

add_executable(squared_sort
        arrays/squared_sort.cpp
        )

add_executable(rainWater
        arrays/rainWater.cpp
        )

add_executable(rotateArray_reversalAlgo
        arrays/rotateArray_reversalAlgo.cpp
        )

add_executable(trappingRainwater3D
        queue/trappingRainwater3D.cpp
        )

add_executable(printBinary
        queue/printBinary.cpp
        )

add_executable(stacksUsingQueue1
        queue/stacksUsingQueue1.cpp
        )

add_executable(stacksUsingQueue2
        queue/stacksUsingQueue2.cpp
        )

add_executable(Alternate_PosNegNumbers
        Alternate_Positioning/Alternate_PosNegNumbers.cpp
        )

add_executable(Alternate_PosNegNumbers2
        Alternate_Positioning/Alternate_PosNegNumbers2.cpp
        )

add_executable(clockwiseMethod1
        matrix_rotation/clockwiseMethod1.cpp
        )

add_executable(antiClockwiseMethod1
        matrix_rotation/antiClockwiseMethod1.cpp
        )

add_executable(clockwiseMethod2
        matrix_rotation/clockwiseMethod2.cpp
        )

add_executable(clockwiseMethod3
        matrix_rotation/clockwiseMethod3.cpp
        )

add_executable(mergeSorted
        linkedList/mergeSorted.cpp
        )

add_executable(nutsAndBolts
        D&C/nutsAndBolts.cpp
        )